// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List: Component should render correctly 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Projects Overview"
  />
  <MobileMenu
    active="projectsNavBtn"
    headerSubtitle="Overview"
    headerTitle="Projects"
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="project.view.projectsListPage"
            values={Object {}}
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectDetailsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project details"
            id="project.view.projectDetails"
            values={Object {}}
          />,
          "to": "/project/undefined",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "dataSourceNavBtn",
          "label": <FormattedMessage
            defaultMessage="Data Sources"
            id="project.view.projectDataSources"
            values={Object {}}
          />,
          "to": "/project/undefined/datasource",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="project.view.usersPage"
            values={Object {}}
          />,
          "to": "/project/undefined/user",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "folderNavBtn",
          "label": <FormattedMessage
            defaultMessage="Pages"
            id="project.view.projectPages"
            values={Object {}}
          />,
          "to": "/project/undefined/folder",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle="Overview"
    title="Projects"
  >
    <PlusButton
      hideOnDesktop={false}
      id="addProjectDesktopBtn"
      onClick={[Function]}
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={false}
    noData={false}
    noDataContent="No Projects"
  >
    <styled.section>
      <Styled(Component)
        footerComponent={
          <ForwardRef(styled.div)
            id="apiPath-0"
          >
            schemacms/api/project_title
          </ForwardRef(styled.div)>
        }
        headerComponent={
          <ForwardRef(styled.ul)>
            <ForwardRef(styled.li)
              id="headerItem-0"
            >
              3 months ago
            </ForwardRef(styled.li)>
            <ForwardRef(styled.li)
              id="headerItem-1"
            >
              In Progress
            </ForwardRef(styled.li)>
            <ForwardRef(styled.li)
              id="headerItem-2"
            >
              Sed sed risus a nibh Maecenas nec pulvinar ex
            </ForwardRef(styled.li)>
          </ForwardRef(styled.ul)>
        }
        key="0"
      >
        <H1
          customStyles={
            Object {
              "cursor": "pointer",
              "wordBreak": "break-word",
            }
          }
          id="projectName-0"
          onClick={[Function]}
        >
          Project Name
        </H1>
        <styled.div
          customStyles={
            Object {
              "fontWeight": 300,
            }
          }
          onClick={[Function]}
        >
          <P
            id="projectDescription-0"
          >
            Description
          </P>
        </styled.div>
      </Styled(Component)>
      <Styled(Component)
        footerComponent={
          <ForwardRef(styled.div)
            id="apiPath-1"
          >
            schemacms/api/wuwhonec-sodales-libero-non-fermentum-aliquam-honec-sodales-libero-non-fermentum-aliquam
          </ForwardRef(styled.div)>
        }
        headerComponent={
          <ForwardRef(styled.ul)>
            <ForwardRef(styled.li)
              id="headerItem-0"
            >
              3 months ago
            </ForwardRef(styled.li)>
            <ForwardRef(styled.li)
              id="headerItem-1"
            >
              Published
            </ForwardRef(styled.li)>
            <ForwardRef(styled.li)
              id="headerItem-2"
            >
              Tadeusz Kosciuszko
            </ForwardRef(styled.li)>
          </ForwardRef(styled.ul)>
        }
        key="1"
      >
        <H1
          customStyles={
            Object {
              "cursor": "pointer",
              "wordBreak": "break-word",
            }
          }
          id="projectName-1"
          onClick={[Function]}
        >
          Honec sodales libero non fermentum aliquam
        </H1>
        <styled.div
          customStyles={
            Object {
              "fontWeight": 300,
            }
          }
          onClick={[Function]}
        >
          <P
            id="projectDescription-1"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed molestie fermentum dictum. In id posuere nibh.
          </P>
        </styled.div>
      </Styled(Component)>
    </styled.section>
  </LoadingWrapper>
  <NavigationContainer
    fixed={true}
    hideOnDesktop={true}
    right={true}
  >
    <PlusButton
      hideOnDesktop={false}
      id="addProjectBtn"
      onClick={[Function]}
    />
  </NavigationContainer>
</styled.div>
`;

exports[`List: Component should render correctly with loading 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Projects Overview"
  />
  <MobileMenu
    active="projectsNavBtn"
    headerSubtitle="Overview"
    headerTitle="Projects"
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="project.view.projectsListPage"
            values={Object {}}
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectDetailsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project details"
            id="project.view.projectDetails"
            values={Object {}}
          />,
          "to": "/project/undefined",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "dataSourceNavBtn",
          "label": <FormattedMessage
            defaultMessage="Data Sources"
            id="project.view.projectDataSources"
            values={Object {}}
          />,
          "to": "/project/undefined/datasource",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="project.view.usersPage"
            values={Object {}}
          />,
          "to": "/project/undefined/user",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "folderNavBtn",
          "label": <FormattedMessage
            defaultMessage="Pages"
            id="project.view.projectPages"
            values={Object {}}
          />,
          "to": "/project/undefined/folder",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle="Overview"
    title="Projects"
  >
    <PlusButton
      hideOnDesktop={false}
      id="addProjectDesktopBtn"
      onClick={[Function]}
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={true}
    noData={false}
    noDataContent="No Projects"
  >
    <styled.section>
      <Styled(Component)
        footerComponent={
          <ForwardRef(styled.div)
            id="apiPath-0"
          >
            schemacms/api/project_title
          </ForwardRef(styled.div)>
        }
        headerComponent={
          <ForwardRef(styled.ul)>
            <ForwardRef(styled.li)
              id="headerItem-0"
            >
              3 months ago
            </ForwardRef(styled.li)>
            <ForwardRef(styled.li)
              id="headerItem-1"
            >
              In Progress
            </ForwardRef(styled.li)>
            <ForwardRef(styled.li)
              id="headerItem-2"
            >
              Sed sed risus a nibh Maecenas nec pulvinar ex
            </ForwardRef(styled.li)>
          </ForwardRef(styled.ul)>
        }
        key="0"
      >
        <H1
          customStyles={
            Object {
              "cursor": "pointer",
              "wordBreak": "break-word",
            }
          }
          id="projectName-0"
          onClick={[Function]}
        >
          Project Name
        </H1>
        <styled.div
          customStyles={
            Object {
              "fontWeight": 300,
            }
          }
          onClick={[Function]}
        >
          <P
            id="projectDescription-0"
          >
            Description
          </P>
        </styled.div>
      </Styled(Component)>
      <Styled(Component)
        footerComponent={
          <ForwardRef(styled.div)
            id="apiPath-1"
          >
            schemacms/api/wuwhonec-sodales-libero-non-fermentum-aliquam-honec-sodales-libero-non-fermentum-aliquam
          </ForwardRef(styled.div)>
        }
        headerComponent={
          <ForwardRef(styled.ul)>
            <ForwardRef(styled.li)
              id="headerItem-0"
            >
              3 months ago
            </ForwardRef(styled.li)>
            <ForwardRef(styled.li)
              id="headerItem-1"
            >
              Published
            </ForwardRef(styled.li)>
            <ForwardRef(styled.li)
              id="headerItem-2"
            >
              Tadeusz Kosciuszko
            </ForwardRef(styled.li)>
          </ForwardRef(styled.ul)>
        }
        key="1"
      >
        <H1
          customStyles={
            Object {
              "cursor": "pointer",
              "wordBreak": "break-word",
            }
          }
          id="projectName-1"
          onClick={[Function]}
        >
          Honec sodales libero non fermentum aliquam
        </H1>
        <styled.div
          customStyles={
            Object {
              "fontWeight": 300,
            }
          }
          onClick={[Function]}
        >
          <P
            id="projectDescription-1"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed molestie fermentum dictum. In id posuere nibh.
          </P>
        </styled.div>
      </Styled(Component)>
    </styled.section>
  </LoadingWrapper>
  <NavigationContainer
    fixed={true}
    hideOnDesktop={true}
    right={true}
  >
    <PlusButton
      hideOnDesktop={false}
      id="addProjectBtn"
      onClick={[Function]}
    />
  </NavigationContainer>
</styled.div>
`;

exports[`List: Component should render without data 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Projects Overview"
  />
  <MobileMenu
    active="projectsNavBtn"
    headerSubtitle="Overview"
    headerTitle="Projects"
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="project.view.projectsListPage"
            values={Object {}}
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectDetailsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project details"
            id="project.view.projectDetails"
            values={Object {}}
          />,
          "to": "/project/undefined",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "dataSourceNavBtn",
          "label": <FormattedMessage
            defaultMessage="Data Sources"
            id="project.view.projectDataSources"
            values={Object {}}
          />,
          "to": "/project/undefined/datasource",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="project.view.usersPage"
            values={Object {}}
          />,
          "to": "/project/undefined/user",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "folderNavBtn",
          "label": <FormattedMessage
            defaultMessage="Pages"
            id="project.view.projectPages"
            values={Object {}}
          />,
          "to": "/project/undefined/folder",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle="Overview"
    title="Projects"
  >
    <PlusButton
      hideOnDesktop={false}
      id="addProjectDesktopBtn"
      onClick={[Function]}
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={false}
    noData={true}
    noDataContent="No Projects"
  >
    <styled.section />
  </LoadingWrapper>
  <NavigationContainer
    fixed={true}
    hideOnDesktop={true}
    right={true}
  >
    <PlusButton
      hideOnDesktop={false}
      id="addProjectBtn"
      onClick={[Function]}
    />
  </NavigationContainer>
</styled.div>
`;
